--- a/app/src/main/res/layout/activity_access_record.xml
+++ b/app/src/main/res/layout/activity_access_record.xml
@@ -11,6 +11,7 @@
         android:id="@+id/btnSelect"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:layout_marginHorizontal="10dp"
         android:text="조회"
         android:textColor="@color/white" />
@@ -20,26 +21,26 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginHorizontal="10dp"
-        android:paddingBottom="10dp">
+        android:paddingVertical="10dp">
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
 
-            android:layout_weight="1.8"
+            android:layout_weight="2"
             android:text="날짜"
             android:textSize="20dp" />
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
 
-            android:layout_weight="1.2"
+            android:layout_weight="1.1"
             android:text="시간"
             android:textSize="20dp" />
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="3"
+            android:layout_weight="3.1"
             android:text="장소"
             android:textSize="20dp"/>
         <TextView
@@ -64,24 +65,24 @@
                 android:id="@+id/dateResult"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1.8"
-                android:textSize="15dp"
+                android:layout_weight="2"
+                android:textSize="16dp"
                 android:textColor="@color/black"/>
 
             <TextView
                 android:id="@+id/timeResult"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1.2"
-                android:textSize="15dp"
+                android:layout_weight="1.1"
+                android:textSize="16dp"
                 android:textColor="@color/black"/>
 
             <TextView
                 android:id="@+id/spotResult"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="3"
-                android:textSize="15dp"
+                android:layout_weight="3.1"
+                android:textSize="16dp"
                 android:textColor="@color/black"/>
 
             <TextView
@@ -89,7 +90,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
-                android:textSize="15dp"
+                android:textSize="16dp"
                 android:textColor="@color/black"/>
         </LinearLayout>
     </ScrollView>
