--- a/app/src/main/res/layout/activity_attend_confirm.xml
+++ b/app/src/main/res/layout/activity_attend_confirm.xml
@@ -22,6 +22,7 @@
             android:layout_weight="1"
             android:textSize="20dp"
             android:layout_gravity="center"
+            android:layout_marginRight="5dp"
             android:textColor="@color/black"/>
 
         <Spinner
@@ -54,7 +55,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginHorizontal="10dp"
-        android:paddingBottom="10dp">
+        android:paddingVertical="10dp">
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -64,19 +65,19 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1.3"
+            android:layout_weight="1.1"
             android:text="이름"
             android:textSize="20dp"/>
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
+            android:layout_weight="1.9"
             android:text="학번"
             android:textSize="20dp"/>
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="2.2"
+            android:layout_weight="2.6"
             android:text="학과"
             android:textSize="20dp"/>
     </LinearLayout>
@@ -96,31 +97,31 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:textSize="15dp"
+                android:textSize="18dp"
                 android:textColor="@color/black"/>
 
             <TextView
                 android:id="@+id/nameResult2"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1.3"
-                android:textSize="15dp"
+                android:layout_weight="1.1"
+                android:textSize="18dp"
                 android:textColor="@color/black"/>
 
             <TextView
                 android:id="@+id/idResult2"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="2"
-                android:textSize="15dp"
+                android:layout_weight="1.9"
+                android:textSize="18dp"
                 android:textColor="@color/black"/>
 
             <TextView
                 android:id="@+id/majorResult2"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="2.2"
-                android:textSize="15dp"
+                android:layout_weight="2.6"
+                android:textSize="18dp"
                 android:textColor="@color/black"/>
         </LinearLayout>
 
