--- a/app/src/main/res/layout/activity_attend_confirm.xml
+++ b/app/src/main/res/layout/activity_attend_confirm.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:theme="@style/ThemeGURU2"
     tools:context="MainActivity">
 
     <LinearLayout
@@ -23,7 +24,8 @@
             android:textSize="20dp"
             android:layout_gravity="center"
             android:layout_marginRight="5dp"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:background="@drawable/edge_bottom"/>
 
         <Spinner
             android:id="@+id/spinner"
@@ -55,31 +57,44 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginHorizontal="10dp"
-        android:paddingVertical="10dp">
+        android:paddingVertical="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/edge_bottom">
+
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@drawable/edge_right"
             android:text="시간"
-            android:textSize="20dp"/>
+            android:textAlignment="center"
+            android:textSize="20dp" />
+
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1.1"
+            android:layout_weight="1"
+            android:background="@drawable/edge_right"
             android:text="이름"
-            android:textSize="20dp"/>
+            android:textAlignment="center"
+            android:textSize="20dp" />
+
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1.9"
-            android:text="학번"
-            android:textSize="20dp"/>
+            android:background="@drawable/edge_right"
+            android:text="학 번"
+            android:textAlignment="center"
+            android:textSize="20dp" />
+
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2.6"
-            android:text="학과"
-            android:textSize="20dp"/>
+            android:text="학 과"
+            android:textAlignment="center"
+            android:textSize="20dp" />
     </LinearLayout>
 
     <ScrollView
@@ -90,7 +105,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingBottom="20dp">
 
             <TextView
                 android:id="@+id/timeResult2"
@@ -98,15 +114,17 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:textSize="18dp"
-                android:textColor="@color/black"/>
+                android:textColor="@color/black"
+                android:paddingLeft="5dp"/>
 
             <TextView
                 android:id="@+id/nameResult2"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1.1"
+                android:layout_weight="1"
                 android:textSize="18dp"
-                android:textColor="@color/black"/>
+                android:textColor="@color/black"
+                android:paddingLeft="5dp"/>
 
             <TextView
                 android:id="@+id/idResult2"
@@ -114,7 +132,8 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1.9"
                 android:textSize="18dp"
-                android:textColor="@color/black"/>
+                android:textColor="@color/black"
+                android:paddingLeft="6dp"/>
 
             <TextView
                 android:id="@+id/majorResult2"
@@ -122,7 +141,8 @@
                 android:layout_height="match_parent"
                 android:layout_weight="2.6"
                 android:textSize="18dp"
-                android:textColor="@color/black"/>
+                android:textColor="@color/black"
+                android:paddingLeft="5dp"/>
         </LinearLayout>
 
 
