--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#A53235</color>
+    <color name="gray">#ABABAB</color>
     <color name ="back">#EBEBEB</color>
 </resources>
