--- a/app/src/main/res/layout/activity_access_record.xml
+++ b/app/src/main/res/layout/activity_access_record.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:theme="@style/ThemeGURU2"
     tools:context=".MainActivity"
-    android:background="@color/back">
+    android:background="@color/white">
 
     <Button
         android:id="@+id/btnSelect"
@@ -23,77 +23,95 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginHorizontal="10dp"
-        android:paddingVertical="10dp">
+        android:paddingVertical="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/edge_bottom">
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
 
             android:layout_weight="2"
-            android:text="날짜"
+            android:background="@drawable/edge_right"
+            android:text="날 짜"
+            android:textAlignment="center"
             android:textSize="20dp" />
+
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
 
             android:layout_weight="1.1"
+            android:background="@drawable/edge_right"
             android:text="시간"
+            android:textAlignment="center"
             android:textSize="20dp" />
+
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3.1"
-            android:text="장소"
-            android:textSize="20dp"/>
+            android:background="@drawable/edge_right"
+            android:text="장  소"
+            android:textAlignment="center"
+            android:textSize="20dp" />
+
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:text="학번"
-            android:textSize="20dp"/>
+            android:text="학 번"
+            android:textAlignment="center"
+            android:textSize="20dp" />
     </LinearLayout>
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginHorizontal="10dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingBottom="20dp">
 
             <TextView
                 android:id="@+id/dateResult"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
-                android:textSize="16dp"
-                android:textColor="@color/black"/>
+                android:textSize="15dp"
+                android:textColor="@color/black"
+                android:paddingLeft="7dp"/>
 
             <TextView
                 android:id="@+id/timeResult"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1.1"
-                android:textSize="16dp"
-                android:textColor="@color/black"/>
+                android:textSize="15dp"
+                android:textColor="@color/black"
+                android:paddingLeft="7dp"/>
 
             <TextView
                 android:id="@+id/spotResult"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="3.1"
-                android:textSize="16dp"
-                android:textColor="@color/black"/>
+                android:textSize="15dp"
+                android:textColor="@color/black"
+                android:paddingLeft="7dp"/>
 
             <TextView
                 android:id="@+id/idResult"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
-                android:textSize="16dp"
-                android:textColor="@color/black"/>
+                android:textSize="15dp"
+                android:textColor="@color/black"
+                android:paddingLeft="7dp"/>
         </LinearLayout>
     </ScrollView>
 
