--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red">#A53235</color>
     <color name ="back">#EBEBEB</color>
+    <color name ="blue">#253C8C</color>
 </resources>
