--- a/app/src/main/res/drawable/btn_radius.xml
+++ b/app/src/main/res/drawable/btn_radius.xml
@@ -4,7 +4,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="20dp"/>
-            <solid android:color="@color/red"/>
+            <solid android:color="@color/blue"/>
         </shape>
     </item>
 </selector>
