--- a/app/src/main/res/layout/activity_login_first.xml
+++ b/app/src/main/res/layout/activity_login_first.xml
@@ -9,7 +9,7 @@
     android:theme="@style/ThemeGURU2">
 
     <Button
-        android:id="@+id/btnLogout"
+        android:id="@+id/btnAccess"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -47,9 +47,9 @@
         android:textColor="#FFFFFF"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/btnAttend"
-        app:layout_constraintEnd_toEndOf="@+id/btnLogout"
+        app:layout_constraintEnd_toEndOf="@+id/btnAccess"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@+id/btnLogout"
+        app:layout_constraintStart_toStartOf="@+id/btnAccess"
         app:layout_constraintTop_toBottomOf="@+id/tvId" />
 
     <Button
@@ -61,10 +61,10 @@
         android:text="결제"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/btnLogout"
-        app:layout_constraintEnd_toEndOf="@+id/btnLogout"
+        app:layout_constraintBottom_toTopOf="@+id/btnAccess"
+        app:layout_constraintEnd_toEndOf="@+id/btnAccess"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@+id/btnLogout"
+        app:layout_constraintStart_toStartOf="@+id/btnAccess"
         app:layout_constraintTop_toBottomOf="@+id/btnCard" />
 
     <TextView
